autoboxing, unboxing, Arrays to Lists